--- a/package.json
+++ b/package.json
@@ -4,11 +4,13 @@
   "description": "Add an autocomplete dropdown to your documentation",
   "main": "dist-es5-module/index.js",
   "scripts": {
-    "dev": "webpack-dev-server --config webpack.dev.config.babel.js --hot --inline --no-info",
+    "dev": "./scripts/dev",
     "shrinkwrap": "npm-shrinkwrap --dev",
     "prepublish": "NODE_ENV=production npm run build",
-    "build": "./scripts/build.sh",
-    "release": "./scripts/release.sh",
+    "build": "./scripts/build",
+    "build:css": "./scripts/build-css",
+    "build:js": "./scripts/build-js",
+    "release": "./scripts/release",
     "lint": "eslint .",
     "test": "BABEL_ENV=test mocha --reporter dot",
     "test:watch": "BABEL_ENV=test mocha --reporter min --watch",
@@ -18,11 +20,13 @@
   "license": "MIT",
   "repository": "algolia/documentationsearch.js",
   "devDependencies": {
+    "autoprefixer": "^6.1.2",
     "babel": "^5.8.29",
     "babel-core": "^5.8.29",
     "babel-eslint": "^4.1.3",
     "babel-loader": "^5.3.2",
     "conventional-changelog": "^0.5.1",
+    "cssnano": "^3.4.0",
     "doctoc": "^0.15.0",
     "eslint": "^1.6.0",
     "eslint-config-airbnb": "^0.1.0",
@@ -35,7 +39,10 @@
     "mocha": "^2.3.4",
     "mocha-jsdom": "^1.0.0",
     "mversion": "^1.10.1",
+    "node-sass": "^3.4.2",
     "npm-shrinkwrap": "^200.4.0",
+    "onchange": "^2.0.0",
+    "postcss-cli": "^2.3.2",
     "pretty-bytes": "^2.0.1",
     "uglifyjs": "^2.4.10",
     "webpack": "^1.12.2",
