--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
-  "name": "documentationsearch.js",
+  "name": "docsearch.js",
   "version": "0.0.1",
   "description": "Add an autocomplete dropdown to your documentation",
   "main": "dist-es5-module/index.js",
   "scripts": {
     "dev": "./scripts/dev",
+    "dev:docs": "./scripts/dev-docs",
     "shrinkwrap": "npm-shrinkwrap --dev",
     "prepublish": "NODE_ENV=production npm run build",
     "build": "./scripts/build",
@@ -18,7 +19,7 @@
   },
   "author": "Algolia <support@algolia.com> (https://github.com/algolia/)",
   "license": "MIT",
-  "repository": "algolia/documentationsearch.js",
+  "repository": "algolia/docsearch.js",
   "devDependencies": {
     "autoprefixer": "^6.1.2",
     "babel": "^5.8.29",
@@ -31,9 +32,10 @@
     "eslint": "^1.6.0",
     "eslint-config-airbnb": "^0.1.0",
     "eslint-config-algolia": "^4.2.0",
+    "eslint-plugin-algolia": "^1.5.0",
     "eslint-plugin-react": "^3.5.1",
     "expect": "^1.13.0",
-    "gh-pages": "^0.5.0",
+    "gh-pages": "^0.8.0",
     "jsdom": "^7.1.1",
     "json": "^9.0.3",
     "mocha": "^2.3.4",
@@ -51,8 +53,9 @@
   "peerDependencies": {},
   "dependencies": {
     "algoliasearch": "^3.9.2",
-    "autocomplete.js": "^0.14.1",
+    "autocomplete.js": "^0.16.0",
     "hogan.js": "^3.0.2",
+    "npm-zepto": "^1.1.7",
     "to-factory": "^1.0.0"
   }
 }
