--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "onchange": "^2.0.0",
     "postcss-cli": "^2.3.2",
     "pretty-bytes": "^2.0.1",
+    "semver": "^5.1.0",
     "uglifyjs": "^2.4.10",
     "webpack": "^1.12.2",
     "webpack-dev-server": "^1.12.1"
