--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "babel-core": "^5.8.29",
     "babel-eslint": "^4.1.3",
     "babel-loader": "^5.3.2",
+    "babel-plugin-rewire": "^0.1.22",
     "conventional-changelog": "^0.5.1",
     "cssnano": "^3.4.0",
     "doctoc": "^0.15.0",
@@ -50,6 +51,7 @@
     "postcss-cli": "^2.3.2",
     "pretty-bytes": "^2.0.1",
     "semver": "^5.1.0",
+    "sinon": "^1.17.2",
     "uglify-js": "^2.6.1",
     "webpack": "^1.12.2",
     "webpack-dev-server": "^1.12.1"
