docs(readme): Add badges
This adds badges to the readme, including the coverage one (through
coveralls).

--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,7 @@ before_install:
 before_cache: npm prune
 install: npm install
 script: ./scripts/test-ci
+after_script: ./scripts/travis-after-script
 branches:
   only:
     - master
