--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "lint": "eslint .",
     "test": "BABEL_ENV=test mocha --reporter dot ./test/helpers.js ./test/*-test.js",
     "test:watch": "BABEL_ENV=test mocha --reporter min --watch ./test/helpers.js ./test/*-test.js",
+    "test:coverage": "./scripts/test-coverage",
     "gh-pages": "./scripts/gh-pages"
   },
   "author": "Algolia <support@algolia.com> (https://github.com/algolia/)",
@@ -27,9 +28,11 @@
     "babel": "^5.8.29",
     "babel-core": "^5.8.29",
     "babel-eslint": "^4.1.3",
+    "babel-istanbul": "^0.5.9",
     "babel-loader": "^5.3.2",
     "babel-plugin-rewire": "^0.1.22",
     "conventional-changelog": "^0.5.1",
+    "coveralls": "^2.11.6",
     "cssnano": "^3.4.0",
     "doctoc": "^0.15.0",
     "eslint": "^1.6.0",
@@ -43,6 +46,7 @@
     "json": "^9.0.3",
     "mocha": "^2.3.4",
     "mocha-jsdom": "^1.0.0",
+    "mocha-lcov-reporter": "^1.0.0",
     "mversion": "^1.10.1",
     "nd": "^1.2.0",
     "node-sass": "^3.4.2",
