--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   "devDependencies": {
     "autoprefixer": "^6.3.6",
     "babel": "^5.8.29",
+    "babel-cli": "^6.16.0",
     "babel-core": "^5.8.29",
     "babel-eslint": "^4.1.3",
     "babel-istanbul": "^0.5.9",
