--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,8 @@
 language: node_js
-node_js: 4
+node_js: stable
 before_install:
   - git config --global user.email "algobot@users.noreply.github.com"
   - git config --global user.name "algobot"
-  - npm prune
   - rvm install 2.2.0
   - rvm use 2.2.0
 before_cache: npm prune
