--- a/.babelrc
+++ b/.babelrc
@@ -1,8 +1,15 @@
 {
+  "presets": [
+    ["env", {
+      "targets": {
+        "browsers": ["last 2 versions", "ie >= 9"]
+      }
+    }],
+    "stage-3"
+  ],
   "env": {
     "test": {
       "plugins": ["babel-plugin-rewire"]
-    }
-  },
-  "stage": 2
+    },
+  }
 }
