--- a/package.json
+++ b/package.json
@@ -15,54 +15,65 @@
     "release": "./scripts/release",
     "release:beta": "./scripts/release-beta",
     "lint": "eslint .",
-    "test": "BABEL_ENV=test mocha --timeout 6000 --reporter dot ./test/helpers.js ./test/*-test.js",
-    "test:watch": "BABEL_ENV=test mocha --reporter min --watch ./test/helpers.js ./test/*-test.js",
-    "test:coverage": "./scripts/test-coverage",
-    "gh-pages": "./scripts/gh-pages"
+    "test": "jest --coverage",
+    "test:watch": "jest --watch",
+    "gh-pages": "./scripts/gh-pages",
+    "precommit": "lint-staged"
   },
+  "lint-staged": {
+    "*.js": [
+      "prettier --write --single-quote --trailing-comma es5",
+      "git add"
+    ]
+  },
+  "files": [
+    "dist/"
+  ],
   "author": "Algolia <support@algolia.com> (https://github.com/algolia/)",
   "license": "MIT",
   "repository": "algolia/docsearch",
   "devDependencies": {
-    "autoprefixer": "^6.3.6",
-    "babel": "^5.8.29",
-    "babel-core": "^5.8.29",
-    "babel-eslint": "^4.1.3",
-    "babel-istanbul": "^0.5.9",
-    "babel-loader": "^5.3.2",
-    "babel-plugin-rewire": "^0.1.22",
-    "conventional-changelog": "^0.5.1",
-    "coveralls": "^2.11.9",
+    "autoprefixer": "^6.7.7",
+    "babel-cli": "^6.24.0",
+    "babel-core": "^6.24.0",
+    "babel-eslint": "^7.1.1",
+    "babel-istanbul": "^0.12.2",
+    "babel-loader": "^6.4.1",
+    "babel-plugin-rewire": "^1.0.0",
+    "babel-preset-env": "^1.2.2",
+    "babel-preset-stage-3": "^6.22.0",
+    "conventional-changelog-cli": "^1.3.1",
     "cssnano": "^3.7.0",
-    "doctoc": "^0.15.0",
-    "eslint": "^1.6.0",
-    "eslint-config-airbnb": "^0.1.0",
-    "eslint-config-algolia": "^4.7.0",
+    "doctoc": "^1.3.0",
+    "eslint": "^3.17.1",
+    "eslint-config-algolia": "^6.0.1",
+    "eslint-config-prettier": "^1.5.0",
+    "eslint-import-resolver-webpack": "^0.8.1",
     "eslint-plugin-algolia": "^1.5.0",
-    "eslint-plugin-react": "^3.5.1",
+    "eslint-plugin-import": "^2.2.0",
+    "eslint-plugin-jest": "^19.0.1",
     "expect": "^1.20.1",
     "gh-pages": "^0.12.0",
-    "jsdom": "^7.1.1",
-    "json": "^9.0.4",
-    "mocha": "^2.5.3",
-    "mocha-jsdom": "^1.1.0",
-    "mocha-lcov-reporter": "^1.2.0",
+    "jest": "^19.0.2",
+    "jsdom": "^9.12.0",
+    "json": "^9.0.6",
     "mversion": "^1.10.1",
     "nd": "^1.2.0",
-    "node-sass": "^3.7.0",
-    "onchange": "^2.5.0",
-    "postcss-cli": "^2.5.2",
-    "pretty-bytes": "^2.0.1",
+    "node-sass": "^4.5.0",
+    "onchange": "^3.2.1",
+    "postcss-cli": "^3.0.0",
+    "prettier": "^0.22.0",
+    "pretty-bytes-cli": "^2.0.0",
     "semver": "^5.1.0",
-    "sinon": "^1.17.4",
-    "uglify-js": "^2.6.2",
-    "webpack": "^1.13.1",
-    "webpack-dev-server": "^1.14.1"
+    "sinon": "^2.0.0",
+    "uglify-js": "^2.8.13",
+    "webpack": "^2.2.1",
+    "webpack-dev-server": "^2.4.2"
   },
   "peerDependencies": {},
   "dependencies": {
-    "algoliasearch": "^3.18.0",
-    "autocomplete.js": "^0.25.0",
+    "algoliasearch": "^3.22.1",
+    "autocomplete.js": "^0.27.0",
     "hogan.js": "^3.0.2",
     "to-factory": "^1.0.0"
   }
