--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "release": "./scripts/release",
     "release:beta": "./scripts/release-beta",
     "lint": "eslint .",
-    "test": "jest --coverage",
+    "test": "jest --coverage && npm run lint",
     "test:watch": "jest --watch",
     "gh-pages": "./scripts/gh-pages",
     "precommit": "lint-staged"
@@ -46,17 +46,18 @@
     "cssnano": "^3.7.0",
     "doctoc": "^1.3.0",
     "eslint": "^3.17.1",
-    "eslint-config-algolia": "^6.0.1",
+    "eslint-config-algolia": "^7.0.1",
     "eslint-config-prettier": "^1.5.0",
     "eslint-import-resolver-webpack": "^0.8.1",
     "eslint-plugin-algolia": "^1.5.0",
     "eslint-plugin-import": "^2.2.0",
     "eslint-plugin-jest": "^19.0.1",
-    "expect": "^1.20.1",
     "gh-pages": "^0.12.0",
+    "husky": "^0.13.2",
     "jest": "^19.0.2",
     "jsdom": "^9.12.0",
     "json": "^9.0.6",
+    "lint-staged": "^3.4.0",
     "mversion": "^1.10.1",
     "nd": "^1.2.0",
     "node-sass": "^4.5.0",
