--- a/docs/package.json
+++ b/docs/package.json
@@ -1,6 +1,6 @@
 {
   "dependencies": {
-    "algolia-aerial": "^1.1.5",
+    "algolia-aerial": "1.1.6",
     "algolia-frontend-components": "^0.0.34"
   }
 }
