--- a/package.json
+++ b/package.json
@@ -15,15 +15,9 @@
     "release": "./scripts/release",
     "release:beta": "./scripts/release-beta",
     "lint": "eslint .",
+    "lint:fix": "npm run lint -- --fix",
     "test": "jest --coverage && npm run lint",
-    "test:watch": "jest --watch",
-    "precommit": "lint-staged"
-  },
-  "lint-staged": {
-    "*.js": [
-      "prettier --write --single-quote --trailing-comma es5",
-      "git add"
-    ]
+    "test:watch": "jest --watch"
   },
   "files": [
     "dist/"
@@ -32,47 +26,45 @@
   "license": "MIT",
   "repository": "algolia/docsearch",
   "devDependencies": {
-    "autoprefixer": "^6.7.7",
-    "babel-cli": "^6.24.0",
-    "babel-core": "^6.24.0",
-    "babel-eslint": "^7.2.1",
+    "autoprefixer": "7.1.5",
+    "babel-cli": "6.26.0",
+    "babel-core": "6.26.0",
+    "babel-eslint": "8.0.1",
     "babel-istanbul": "^0.12.2",
-    "babel-loader": "^6.4.1",
-    "babel-plugin-rewire": "^1.0.0",
-    "babel-preset-env": "^1.2.2",
-    "babel-preset-stage-3": "^6.22.0",
-    "conventional-changelog-cli": "^1.3.1",
+    "babel-jest": "21.2.0",
+    "babel-loader": "7.1.2",
+    "babel-plugin-rewire": "1.1.0",
+    "babel-preset-env": "1.6.1",
+    "babel-preset-stage-3": "6.24.1",
+    "conventional-changelog-cli": "1.3.4",
     "cssnano": "^3.7.0",
     "doctoc": "^1.3.0",
-    "eslint": "^3.18.0",
-    "eslint-config-algolia": "^7.0.2",
-    "eslint-config-prettier": "^1.5.0",
-    "eslint-import-resolver-webpack": "^0.8.1",
-    "eslint-plugin-algolia": "^1.5.0",
-    "eslint-plugin-import": "^2.2.0",
-    "eslint-plugin-jest": "^19.0.1",
-    "gh-pages": "^0.12.0",
-    "husky": "^0.13.3",
-    "jest": "^19.0.2",
-    "jsdom": "^9.12.0",
+    "eslint": "4.9.0",
+    "eslint-config-algolia": "12.0.0",
+    "eslint-config-prettier": "2.6.0",
+    "eslint-plugin-import": "2.7.0",
+    "eslint-plugin-jest": "21.2.0",
+    "eslint-plugin-prettier": "2.3.1",
+    "gh-pages": "1.0.0",
+    "jest": "21.2.1",
+    "jsdom": "11.3.0",
     "json": "^9.0.6",
-    "lint-staged": "^3.4.0",
     "mversion": "^1.10.1",
-    "node-sass": "^4.5.1",
+    "node-sass": "4.5.3",
     "onchange": "^3.2.1",
-    "postcss-cli": "^3.0.0",
-    "prettier": "^0.22.0",
+    "postcss-cli": "4.1.1",
+    "prettier": "1.7.4",
     "pretty-bytes-cli": "^2.0.0",
-    "semver": "^5.1.0",
-    "sinon": "^2.1.0",
-    "uglify-js": "^2.8.16",
-    "webpack": "^2.3.2",
-    "webpack-dev-server": "^2.4.2"
+    "semver": "5.4.1",
+    "sinon": "4.0.1",
+    "uglify-js": "3.1.4",
+    "webpack": "3.8.1",
+    "webpack-dev-server": "2.9.2"
   },
   "peerDependencies": {},
   "dependencies": {
-    "algoliasearch": "^3.22.1",
-    "autocomplete.js": "^0.28.0",
+    "algoliasearch": "3.24.5",
+    "autocomplete.js": "0.29.0",
     "hogan.js": "^3.0.2",
     "to-factory": "^1.0.0"
   }
