--- a/package.json
+++ b/package.json
@@ -63,8 +63,8 @@
   },
   "peerDependencies": {},
   "dependencies": {
-    "algoliasearch": "3.24.5",
-    "autocomplete.js": "0.29.0",
+    "algoliasearch": "^3.24.5",
+    "autocomplete.js": "^0.29.0",
     "hogan.js": "^3.0.2",
     "to-factory": "^1.0.0"
   }
