--- a/package.json
+++ b/package.json
@@ -25,11 +25,22 @@
   "author": "Algolia <support@algolia.com> (https://github.com/algolia/)",
   "license": "MIT",
   "repository": "algolia/docsearch",
+  "renovate": {
+    "extends": [
+      "config:library",
+      "schedule:weekends",
+      ":automergeMinor",
+      ":automergeBranchPush",
+      ":semanticCommits",
+      ":rebaseStalePrs",
+      ":timezone(Europe/Paris)"
+    ]
+  },
   "devDependencies": {
-    "autoprefixer": "7.1.6",
+    "autoprefixer": "7.2.1",
     "babel-cli": "6.26.0",
     "babel-core": "6.26.0",
-    "babel-eslint": "8.0.2",
+    "babel-eslint": "8.0.3",
     "babel-istanbul": "0.12.2",
     "babel-jest": "21.2.0",
     "babel-loader": "7.1.2",
@@ -39,27 +50,27 @@
     "conventional-changelog-cli": "1.3.5",
     "cssnano": "3.10.0",
     "doctoc": "1.3.0",
-    "eslint": "4.9.0",
-    "eslint-config-algolia": "12.0.0",
-    "eslint-config-prettier": "2.7.0",
+    "eslint": "4.12.1",
+    "eslint-config-algolia": "13.0.1",
+    "eslint-config-prettier": "2.9.0",
     "eslint-plugin-import": "2.8.0",
-    "eslint-plugin-jest": "21.3.2",
+    "eslint-plugin-jest": "21.4.2",
     "eslint-plugin-prettier": "2.3.1",
-    "gh-pages": "1.0.0",
+    "gh-pages": "1.1.0",
     "jest": "21.2.1",
-    "jsdom": "11.3.0",
+    "jsdom": "11.5.1",
     "json": "9.0.6",
     "mversion": "1.10.1",
-    "node-sass": "4.6.0",
-    "onchange": "3.2.1",
+    "node-sass": "4.7.2",
+    "onchange": "3.3.0",
     "postcss-cli": "4.1.1",
-    "prettier": "1.7.4",
+    "prettier": "1.9.1",
     "pretty-bytes-cli": "2.0.0",
     "semver": "5.4.1",
-    "sinon": "4.0.1",
-    "uglify-js": "3.1.5",
-    "webpack": "3.8.1",
-    "webpack-dev-server": "2.9.4"
+    "sinon": "4.1.2",
+    "uglify-js": "3.2.1",
+    "webpack": "3.10.0",
+    "webpack-dev-server": "2.9.7"
   },
   "peerDependencies": {},
   "dependencies": {
