chore(npm): use yarn by default
Yarn should be working now. We use it in all projects but this one
because of netlify failures long time ago. Now working.

--- a/netlify.toml
+++ b/netlify.toml
@@ -1,2 +1,9 @@
 [build]
     base = "docs"
+    command = "bundle exec middleman build"
+    publish = "docs/build/"
+  [build.environment]
+    YARN_VERSION = "1.6.0"
+    NODE_ENV = "development"
+    JEKYLL_ENV = "production"
+
