--- a/docs/algolia-aerial/package.json
+++ b/docs/algolia-aerial/package.json
@@ -7,15 +7,15 @@
     "vars": "env | grep npm_package_version"
   },
   "devDependencies": {
-    "extract-text-webpack-plugin": "3.0.2",
-    "node-sass": "4.8.3",
-    "sass-loader": "6.0.7",
-    "webpack": "3.11.0",
-    "webpack-auto-inject-version": "1.1.0",
-    "webpack-livereload-plugin": "0.11.0"
+    "extract-text-webpack-plugin": "^3.0.0",
+    "node-sass": "^4.5.3",
+    "sass-loader": "^6.0.6",
+    "webpack": "^3.10.0",
+    "webpack-auto-inject-version": "^1.0.0",
+    "webpack-livereload-plugin": "^0.11.0"
   },
   "name": "algolia-aerial",
-  "version": "1.2.6",
+  "version": "1.3.4",
   "description": "algolia-aerial package",
   "main": "webpack.config.js",
   "author": "Lucas Bonomi <@LukyVj> (http://lucasbonomi.com)",
