--- a/docs/package.json
+++ b/docs/package.json
@@ -1,6 +1,8 @@
 {
+  "name": "docsearch-docs",
+  "private": true,
   "dependencies": {
-    "algolia-aerial": "1.2.6",
+    "algolia-aerial": "1.3.4",
     "algolia-frontend-components": "0.0.34"
   }
 }
