--- a/package.json
+++ b/package.json
@@ -78,5 +78,8 @@
     "autocomplete.js": "^0.30.0",
     "hogan.js": "^3.0.2",
     "to-factory": "^1.0.0"
+  },
+  "jest": {
+    "testPathIgnorePatterns": ["/node_modules/", "dist"]
   }
 }
