chore(security): upgrade nokogiri

--- a/docs/Gemfile
+++ b/docs/Gemfile
@@ -21,7 +21,7 @@ gem 'sprockets', '4.0.0.beta4'
 gem 'middleman-sprockets'
 gem 'sprockets-es6'
 gem 'redcarpet', '>= 3.3.4'
-gem 'nokogiri'
+gem 'nokogiri', '>= 1.8.2'
 gem 'sassc'
 gem 'kramdown', '>= 1.12.0'
 gem 'pry-byebug'
