--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
     "algoliasearch": "^3.24.5",
     "autocomplete.js": "^0.30.0",
     "hogan.js": "^3.0.2",
+    "request": "^2.87.0",
     "stack-utils": "^1.0.1",
     "to-factory": "^1.0.0"
   }
