--- a/package.json
+++ b/package.json
@@ -57,7 +57,7 @@
     "eslint-plugin-jest": "21.18.0",
     "eslint-plugin-prettier": "2.6.2",
     "gh-pages": "1.2.0",
-    "jest": "23.4.2",
+    "jest": "^23.4.2",
     "jsdom": "11.12.0",
     "json": "9.0.6",
     "mversion": "1.12.0",
