--- a/package.json
+++ b/package.json
@@ -48,7 +48,7 @@
     "babel-preset-env": "1.7.0",
     "babel-preset-stage-3": "6.24.1",
     "conventional-changelog-cli": "2.0.1",
-    "cssnano": "4.0.5",
+    "cssnano": "^4.0.5",
     "doctoc": "1.3.1",
     "eslint": "5.2.0",
     "eslint-config-algolia": "13.1.0",
