responsive docs+nav / scripts

--- a/docs/config.json
+++ b/docs/config.json
@@ -45,7 +45,7 @@
       "pages": [
         {
           "title": "Overview",
-          "url": "dropdown.tml"
+          "url": "dropdown.html"
         },
         {
           "title": "Styling",
