--- a/scripts/build
+++ b/scripts/build
@@ -1,12 +1,6 @@
 #!/usr/bin/env bash
-
-set -e # exit when error
+set -e
 
 rm -rf dist
-
-# JavaScript
-npm run build:js
-npm run build:css
-
-# Documentation
-npm run build:docs
+yarn run build:js
+yarn run build:css
