Fix z-Index of poppin and add linting of CSS

--- a/docs/package.json
+++ b/docs/package.json
@@ -3,10 +3,10 @@
   "description": "DocSearch documentation",
   "scripts": {
     "build": "NODE_ENV=production babel-node ./scripts/build.js",
-    "lint": "./scripts/lint",
-    "serve": "babel-node ./scripts/serve.js",
     "deploy": "./scripts/deploy",
-    "precommit": "yarn lint"
+    "lint": "./scripts/lint",
+    "precommit": "./scripts/precommit",
+    "serve": "babel-node ./scripts/serve.js"
   },
   "devDependencies": {
     "@babel/cli": "^7.0.0-beta.51",
