Rewriting the Run Your Own page

--- a/docs/config.json
+++ b/docs/config.json
@@ -76,8 +76,8 @@
           "url": "config-file.html"
         },
         {
-          "title": "Docker image",
-          "url": "docker.html"
+          "title": "Run your own",
+          "url": "run-your-own.html"
         }
       ]
     }
