docs(deploy): Update deploy documentation system

--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "build:css": "./scripts/build-css",
     "build:js": "./scripts/build-js",
     "docs:build": "cd ./docs && yarn build",
-    "docs:lint": "cd ./docs && yarn lint",
     "docs:serve": "cd ./docs && yarn serve",
+    "docs:deploy": "cd ./docs && yarn deploy",
     "doctoc": "doctoc --maxlevel 3 README.md CONTRIBUTING.md",
     "lint": "./scripts/lint",
     "release": "./scripts/release",
