--- a/docs/package.json
+++ b/docs/package.json
@@ -5,7 +5,11 @@
     "build": "NODE_ENV=production babel-node ./scripts/build.js",
     "deploy": "./scripts/deploy",
     "lint": "./scripts/lint",
-    "precommit": "./scripts/precommit",
+    "lint:js": "./scripts/lint-js",
+    "lint:css": "./scripts/lint-css",
+    "lint:md": "./scripts/lint-md",
+    "lint:md:fix": "./scripts/lint-md-fix",
+    "prepush": "./scripts/prepush",
     "serve": "babel-node ./scripts/serve.js"
   },
   "devDependencies": {
@@ -50,6 +54,14 @@
     "prettier": "1.9.2",
     "pug": "^2.0.3",
     "puppeteer": "^1.6.1",
+    "remark-cli": "^5.0.0",
+    "remark-frontmatter": "^1.2.1",
+    "remark-lint-no-trailing-spaces": "^2.0.0",
+    "remark-preset-lint-consistent": "^2.0.2",
+    "remark-preset-lint-markdown-style-guide": "^2.1.2",
+    "remark-preset-lint-recommended": "^3.0.2",
+    "remark-reference-links": "^4.0.2",
+    "remark-word-wrap": "^2.0.2",
     "stylelint": "^9.3.0",
     "stylelint-csstree-validator": "^1.3.0",
     "tailwindcss": "^0.6.4"
