--- a/docs/package.json
+++ b/docs/package.json
@@ -63,7 +63,10 @@
     "remark-reference-links": "^4.0.2",
     "stylelint": "^9.3.0",
     "stylelint-csstree-validator": "^1.3.0",
-    "tailwindcss": "^0.6.4"
+    "tailwindcss": "^0.6.4",
+    "textlint": "^11.0.0",
+    "textlint-rule-common-misspellings": "^1.0.1",
+    "textlint-rule-stop-words": "pixelastic/textlint-rule-stop-words#master"
   },
   "peerDependencies": {},
   "dependencies": {
