Add write-good linting

--- a/docs/package.json
+++ b/docs/package.json
@@ -68,7 +68,8 @@
     "textlint-rule-common-misspellings": "^1.0.1",
     "textlint-rule-en-capitalization": "^2.0.1",
     "textlint-rule-stop-words": "^1.0.4",
-    "textlint-rule-terminology": "^1.1.29"
+    "textlint-rule-terminology": "^1.1.29",
+    "textlint-rule-write-good": "^1.6.2"
   },
   "peerDependencies": {},
   "dependencies": {
