--- a/docs/package.json
+++ b/docs/package.json
@@ -65,6 +65,7 @@
     "stylelint-csstree-validator": "^1.3.0",
     "tailwindcss": "^0.6.4",
     "textlint": "^11.0.0",
+    "textlint-rule-alex": "^1.3.1",
     "textlint-rule-common-misspellings": "^1.0.1",
     "textlint-rule-en-capitalization": "^2.0.1",
     "textlint-rule-stop-words": "^1.0.4",
