--- a/docs/package.json
+++ b/docs/package.json
@@ -9,7 +9,7 @@
     "lint:css": "./scripts/lint-css",
     "lint:md": "./scripts/lint-md",
     "lint:md:fix": "./scripts/lint-md-fix",
-    "prepush": "./scripts/prepush",
+    "prepush": "yarn lint",
     "serve": "babel-node ./scripts/serve.js"
   },
   "devDependencies": {
@@ -34,6 +34,7 @@
     "eslint-plugin-prettier": "2.6.2",
     "front-matter": "2.3.0",
     "fs-extra": "7.0.0",
+    "gh-pages": "1.2.0",
     "glob": "7.1.2",
     "husky": "0.14.3",
     "inquirer": "6.2.0",
@@ -43,9 +44,6 @@
     "markdown-it-anchor": "5.0.2",
     "markdown-it-highlightjs": "3.0.0",
     "normalize.css": "8.0.0",
-    "p-all": "1.0.0",
-    "p-each-series": "1.0.0",
-    "p-map": "1.2.0",
     "pify": "3.0.0",
     "postcss": "6.0.23",
     "postcss-clean": "1.1.0",
@@ -53,7 +51,9 @@
     "postcss-nested": "3.0.0",
     "prettier": "1.14.2",
     "pug": "2.0.3",
-    "puppeteer": "1.7.0",
+    "p-all": "1.0.0",
+    "p-each-series": "1.0.0",
+    "p-map": "1.2.0",
     "remark-cli": "5.0.0",
     "remark-frontmatter": "1.2.1",
     "remark-lint-no-trailing-spaces": "2.0.0",
