--- a/docs/config.json
+++ b/docs/config.json
@@ -9,45 +9,33 @@
   "placeholders": {
     "docSearchJSVersion": "2"
   },
-  "sidebar": [
+ "sidebar": [
     {
-      "title": "Essentials",
+      "title": “Getting Started”,
       "pages": [
         {
           "title": "What is DocSearch?",
           "url": "what-is-docsearch.html"
         },
         {
-          "title": "How does it work?",
+          "title": "How Does It Work?",
           "url": "how-does-it-work.html"
         },
         {
-          "title": "Who can apply?",
+          "title": "Who Can Apply?",
           "url": "who-can-apply.html"
         },
         {
-          "title": "Apply now",
+          "title": "Apply Now!",
           "url": "apply.html"
         },
-        {
-          "title": "Integrations",
-          "url": "integrations.html"
-        },
-        {
-          "title": "Tips",
-          "url": "tips.html"
-        },
-        {
-          "title": "FAQ",
-          "url": "faq.html"
-        }
       ]
     },
     {
-      "title": "Dropdown UI",
+      "title": “Adding DocSearch To Your UI",
       "pages": [
         {
-          "title": "Overview",
+          "title": “Dropdown UI Overview",
           "url": "dropdown.html"
         },
         {
@@ -55,28 +43,48 @@
           "url": "styling.html"
         },
         {
-          "title": "Behavior",
+          "title": “Behavior",
           "url": "behavior.html"
         }
       ]
     },
     {
-      "title": "Crawler",
+      "title": “Tips, FAQ, Misc”,
       "pages": [
         {
-          "title": "Overview",
+          "title": "Tips",
+          "url": "tips.html"
+        },
+        {
+          "title": "FAQ",
+          "url": "faq.html"
+        },
+        {
+          "title": "Website Generators“,
+          "url": "integrations.html"
+        }
+      ]
+    },
+    {
+      "title": “Let’s Get Technical",
+      "pages": [
+        {
+          "title": “DocSearch Technical Overview (the Crawler)“,
           "url": "crawler-overview.html"
         },
         {
-          "title": "Inside the engine",
+          "title": "Inside The Engine",
           "url": "inside-the-engine.html"
         },
         {
-          "title": "Config files",
+          "title": "Config Files",
           "url": "config-file.html"
+        },{
+          "title": "Build An Index",
+          "url": "how-do-we-build-an-index.html"
         },
         {
-          "title": "Run your own",
+          "title": "Run Your Own",
           "url": "run-your-own.html"
         }
       ]
