--- a/netlify.toml
+++ b/netlify.toml
@@ -11,5 +11,5 @@
 
 # Deploy previews on each PR
 [context.deploy-preview]
-  command = "yarn run docs:build"
+  command = "./scripts/docs/netlify-deploy-preview"
   publish = "docs/dist"
