--- a/docs/package.json
+++ b/docs/package.json
@@ -42,8 +42,12 @@
     "lodash": "4.17.11",
     "markdown-it": "8.4.2",
     "markdown-it-anchor": "5.0.2",
+    "markdown-it-classy": "^0.2.0",
     "markdown-it-highlightjs": "3.0.0",
     "normalize.css": "8.0.0",
+    "p-all": "1.0.0",
+    "p-each-series": "1.0.0",
+    "p-map": "1.2.0",
     "pify": "3.0.0",
     "postcss": "6.0.23",
     "postcss-clean": "1.1.0",
@@ -51,9 +55,6 @@
     "postcss-nested": "3.0.0",
     "prettier": "1.14.3",
     "pug": "2.0.3",
-    "p-all": "1.0.0",
-    "p-each-series": "1.0.0",
-    "p-map": "1.2.0",
     "remark-cli": "5.0.0",
     "remark-frontmatter": "1.3.0",
     "remark-lint-no-trailing-spaces": "2.0.0",
