docs(deploy): Document how to deploy the website

--- a/netlify.toml
+++ b/netlify.toml
@@ -7,7 +7,7 @@
 
 # Deploy documentation website on each commit on master
 [context.master]
-  command = "./scripts/netlify-master"
+  command = "./docs/scripts/netlify-master"
 
 # Deploy previews on each PR
 [context.deploy-preview]
