--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "eslint-plugin-import": "2.14.0",
     "eslint-plugin-jest": "21.24.1",
     "eslint-plugin-prettier": "2.7.0",
+    "husky": "1.1.1",
     "jest": "23.6.0",
     "jsdom": "11.12.0",
     "json": "9.0.6",
