--- a/docs/package.json
+++ b/docs/package.json
@@ -28,6 +28,7 @@
     "cheerio": "1.0.0-rc.2",
     "chokidar": "2.0.4",
     "cpx": "1.5.0",
+    "diff2html-cli": "2.6.0",
     "eslint": "4.19.1",
     "eslint-config-algolia": "13.2.3",
     "eslint-config-prettier": "2.10.0",
