docs(css-helper): Add a page about a CSS helper to create a config

--- a/docs/config.json
+++ b/docs/config.json
@@ -76,6 +76,10 @@
           "url": "config-file.html"
         },
         {
+          "title": "CSS Helper",
+          "url": "css-helper.html"
+        },
+        {
           "title": "Build An Index",
           "url": "how-do-we-build-an-index.html"
         },
