promorting recomended configuration

--- a/docs/config.json
+++ b/docs/config.json
@@ -48,6 +48,9 @@
     {
       "title": "Tips, FAQ, Misc",
       "pages": [{
+          "title": "Recommended configuration",
+          "url": "recomended-configuration.html"
+        }, {
           "title": "Tips",
           "url": "tips.html"
         },
