adding js-beautify to format scss file

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "docs:serve": "cd ./docs && yarn serve",
     "docs:deploy": "cd ./docs && yarn deploy",
     "lint": "./scripts/lint",
+    "beautify:scss": "find ./src -type f -name '*.scss' | xargs ./node_modules/.bin/js-beautify -r",
     "release": "./scripts/release",
     "release:beta": "./scripts/release-beta",
     "serve": "./scripts/serve",
@@ -55,6 +56,7 @@
     "eslint-plugin-jest": "21.24.1",
     "eslint-plugin-prettier": "2.7.0",
     "jest": "23.6.0",
+    "js-beautify": "^1.8.8",
     "jsdom": "11.12.0",
     "json": "9.0.6",
     "live-server": "1.2.0",
