--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "docs:serve": "cd ./docs && yarn serve",
     "docs:deploy": "cd ./docs && yarn deploy",
     "lint": "./scripts/lint",
+    "format:scss": "find ./src -type f -name '*.scss' | xargs yarn prettier --write ",
     "release": "./scripts/release",
     "release:beta": "./scripts/release-beta",
     "serve": "./scripts/serve",
