use prettier with md files

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "docs:deploy": "cd ./docs && yarn deploy",
     "lint": "./scripts/lint",
     "format:scss": "find ./src -type f -name '*.scss' | xargs yarn prettier --write ",
+    "format:md": "yarn prettier --write '**/*.md'",
     "release": "./scripts/release",
     "release:beta": "./scripts/release-beta",
     "serve": "./scripts/serve",
