use glob instead of find
Co-Authored-By: s-pace <sylvain.pace@algolia.com>

--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "docs:serve": "cd ./docs && yarn serve",
     "docs:deploy": "cd ./docs && yarn deploy",
     "lint": "./scripts/lint",
-    "format:scss": "find ./src -type f -name '*.scss' | xargs yarn prettier --write ",
+    "format:scss": "prettier --write ./src/**/*.scss",
     "format:md": "yarn prettier --write '**/*.md'",
     "release": "./scripts/release",
     "release:beta": "./scripts/release-beta",
