use prettier straight away
Co-Authored-By: s-pace <sylvain.pace@algolia.com>

--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "docs:deploy": "cd ./docs && yarn deploy",
     "lint": "./scripts/lint",
     "format:scss": "prettier --write ./src/**/*.scss",
-    "format:md": "yarn prettier --write '**/*.md'",
+    "format:md": "prettier --write '**/*.md'",
     "release": "./scripts/release",
     "release:beta": "./scripts/release-beta",
     "serve": "./scripts/serve",
