overridde instead of replace

--- a/.prettierrc
+++ b/.prettierrc
@@ -1,3 +1,10 @@
 {
-  "singleQuote": true
+  "overrides": [
+    {
+      "files": "*.scss",
+      "options": {
+        "singleQuote": true
+      }
+    }
+  ]
 }
