Updating release script
Script was mentioning an update to shrinkwrap that we no longer use.
Also it was calling `yarn run doctoc` that had been remove in an old
commit, and re-added.

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "docs:build": "cd ./docs && yarn build",
     "docs:serve": "cd ./docs && yarn serve",
     "docs:deploy": "cd ./docs && yarn deploy",
+    "doctoc": "doctoc --maxlevel 3 README.md CONTRIBUTING.md",
     "lint": "./scripts/lint",
     "format:scss": "prettier --write ./src/**/*.scss",
     "format:md": "prettier --write '**/*.md'",
@@ -50,6 +51,7 @@
     "babel-preset-stage-3": "6.24.1",
     "conventional-changelog-cli": "2.0.11",
     "cssnano": "4.1.4",
+    "doctoc": "1.3.1",
     "eslint": "5.4.0",
     "eslint-config-algolia": "13.2.3",
     "eslint-config-prettier": "2.10.0",
