--- a/package.json
+++ b/package.json
@@ -18,8 +18,7 @@
     "release:beta": "./scripts/release-beta",
     "serve": "./scripts/serve",
     "test": "./scripts/test",
-    "test:watch": "./scripts/test-watch",
-    "postinstall": "cd ./docs && yarn install"
+    "test:watch": "./scripts/test-watch"
   },
   "files": [
     "dist/"
