--- a/package.json
+++ b/package.json
@@ -17,8 +17,7 @@
     "release": "./scripts/release",
     "serve": "./scripts/serve",
     "test": "./scripts/test",
-    "test:watch": "./scripts/test-watch",
-    "postinstall": "cd ./docs && yarn install"
+    "test:watch": "./scripts/test-watch"
   },
   "files": [
     "dist/"
